packages/app/components/ui/LoaderLine.module.scss
@import '../../styles//constants';

.wrapper {
  position: fixed;
  display: flex;
  z-index: 120;
  background-color: transparent;
  top: 0;
  width: 100%;
  height: 4px;

  .container {
    &.open {
      width: 0;
      height: 100%;
      background-size: 400% 400%;
      animation: gradient $load-page-duration ease infinite;

    }

    &.slow {
      animation: gradient $load-translate-duration ease infinite !important;
    }
  }

  &.local {
    position: relative;
    display: block;
    width: calc($translate-container-max - $container-padding * 2);

    @media (max-width: $mobile-width) {
      width: calc(100% - $container-padding * 2);
    }
  }
}

@keyframes gradient {
  0% {
    width: 0;
  }

  50% {
    width: 50%;
  }

  100% {
    width: 100%;
  }
}

